--- a/app/src/main/res/layout/tab1_fragment.xml
+++ b/app/src/main/res/layout/tab1_fragment.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="263dp"
-            app:srcCompat="@drawable/amarPhoto" />
+            app:srcCompat="@drawable/amarphoto" />
 
         <LinearLayout
             android:layout_width="match_parent"
