--- a/app/src/main/res/layout/tab2_fragment.xml
+++ b/app/src/main/res/layout/tab2_fragment.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="263dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/amarphoto" />
 
         <LinearLayout
             android:layout_width="match_parent"
